В default скине теперь температура и данные с аналогового выхода показываются в динамических графиках. Сортируя по модулям или местонахождению теперь меняет url ссылка, таким образом можно сразу открывать нужные вам модули или комнаты. Теперь в response можно добавлять url пример: "response":"page.htm?setup"

--- a/dev_data/block-analog.htm
+++ b/dev_data/block-analog.htm
@@ -1,11 +1,8 @@
 <div class="col-md-6">
  <div class="block">
   <h5 class="alert-default">{{SSDP}}</h5>
-  <div class="alert alert-dismissible alert-info">
-   <a href="http://{{ip}}/page.htm?chart&analog" target="_blank" class="close"><i class="popup-img"></i></a>
-   {{title}}: <b>{{data}}</b>
-  </div>
-  <!-- <div id="ct-analog" style="height:100px;margin-left:-20px"></div> -->
+  <h2>{{LangAnalog}}</h2>
+  <div id="{{analogId}}" style="height:200px;margin-left:-20px"></div>
   <a class="btn btn-block btn-default" href="http://{{ip}}/page.htm?chart&analog"><i class="set-img"></i>{{LangOptions1}}</a>
  </div>
 </div>
